[package]
name = "feritscope"
version = "0.1.0"
edition = "2024"
authors = ["cviper13"]
description = "Highly customizable, high-performance desktop ATC radar client for ATC24"

[dependencies]
# gui framework
eframe = "0.28"
egui = "0.28"

# async runtime and websocket
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
notify = "6.1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# http client for rest endpoints
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
